--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.1.2",
+    "axios": "^1.8.4",
+    "context": "^3.0.33",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
